[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper"
version = "1.0.0"
description = "Package for rat SCS mapping paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.2",
    "pandas==2.0.2",
    "scikit-learn==1.2.1",
    "jax[cpu]==0.4.24",
    "jaxlib==0.4.24",
    "numpyro[cpu]==0.13.2",
    "arviz==0.18.0",
    "matplotlib==3.7.0",
    "seaborn==0.12.2",
    "statsmodels==0.14.5",
    "joblib==1.3.2",
    "notebook==7.3.2",
    "openpyxl==3.1.5",
]
